added test page and fixed bugs

--- a/_posts/2022-01-11-test_page.md
+++ b/_posts/2022-01-11-test_page.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Configuring Manjaro Linux"
+title: "A Test Page"
 categories: "guides"
 tags: "software linux manjaro"
 published: true
