updated test page to work correctly

--- a/_posts/2022-01-11-test_page.md
+++ b/_posts/2022-01-11-test_page.md
@@ -1,23 +1,18 @@
 ---
 layout: post
 title: "A Test Page"
-categories: "guides"
-tags: "software linux manjaro"
+categories: guides
+tags: [software, linux, manjaro]
 published: true
 ---
-
-category: 
-{% for cat in page.categories %}
-{{ cat }} 
-{% endfor %}, tags: 
-{% for tag in page.tags %}
-{{ tag }} 
-{% endfor %}
-  
+_category: {{ page.category }}_
 _last updated on {{ page.date | date_to_string: "ordinal", "US" }}_
   
 stuff and things
-  
-<a href="{{ page.next }}">next post</a>
-<a href="{{ page.previous }}">previous post</a>
 
+{% if page.next.url %}
+<a href="{{ page.next }}">next: {{ page.next.title }}</a>
+{% endif %}
+{% if page.prev.url %}
+<a href="{{ page.previous }}">previous: {{ page.previous.title }}</a>
+{% endif %}
