fiddling with HTML until things work

--- a/_posts/2022-01-11-test_page.md
+++ b/_posts/2022-01-11-test_page.md
@@ -1,18 +1,19 @@
 ---
 layout: post
 title: "A Test Page"
-categories: guides
+category: guides
 tags: [software, linux, manjaro]
 published: true
 ---
-_category: {{ page.category }}_
+_category: {{ page.category | slugify }}_
+  
 _last updated on {{ page.date | date_to_string: "ordinal", "US" }}_
   
 stuff and things
 
 {% if page.next.url %}
-<a href="{{ page.next }}">next: {{ page.next.title }}</a>
+<a href="{{ page.next.url }}">next: {{ page.next.title }}</a>
 {% endif %}
 {% if page.prev.url %}
-<a href="{{ page.previous }}">previous: {{ page.previous.title }}</a>
+<a href="{{ page.previous.url }}">previous: {{ page.previous.title }}</a>
 {% endif %}
