unpublished manjaro page until I write it

--- a/_posts/2022-01-11-test_page.md
+++ b/_posts/2022-01-11-test_page.md
@@ -1,19 +1,18 @@
 ---
 layout: post
 title: "A Test Page"
-category: guides
-tags: [software, linux, manjaro]
+date: 2022-01-11
+category: test-page
+tags: [software, web]
 published: true
 ---
-_category: {{ page.category | slugify }}_
+_Last updated on {{ page.date | date_to_string: "ordinal", "US" }}_
   
-_last updated on {{ page.date | date_to_string: "ordinal", "US" }}_
-  
-stuff and things
+interesting text here!
 
 {% if page.next.url %}
-<a href="{{ page.next.url }}">next: {{ page.next.title }}</a>
+<a href="{{ page.next.url }}">Next: {{ page.next.title }}</a>
 {% endif %}
 {% if page.prev.url %}
-<a href="{{ page.previous.url }}">previous: {{ page.previous.title }}</a>
+<a href="{{ page.previous.url }}">Previous: {{ page.previous.title }}</a>
 {% endif %}
