--- a/_posts/2022-01-11-test_page.md
+++ b/_posts/2022-01-11-test_page.md
@@ -13,6 +13,6 @@ interesting text here!
 {% if page.next.url %}
 <a href="{{ page.next.url }}">Next: {{ page.next.title }}</a>
 {% endif %}
-{% if page.prev.url %}
+{% if page.previous.url %}
 <a href="{{ page.previous.url }}">Previous: {{ page.previous.title }}</a>
 {% endif %}
